# claude-cowork-sync

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
docs/: LEARNINGS.md
python/: README.md  pyproject.toml
python/src/claude_cowork_sync/: __init__.py  browser_storage.py  cli.py  deploy.py  merge_engine.py  models.py  remote_profile.py  utils.py
python/swift-gui/: Package.swift
python/swift-gui/Sources/CoworkMergeApp/: ContentView.swift  CoworkMergeApp.swift  MergeViewModel.swift
python/swift-gui/Sources/CoworkMergeCore/: MergeCommandBuilder.swift  MergeFormData.swift  ShellCommandRunner.swift
python/tests/: test_browser_storage.py  test_cli_merge_from.py  test_fs_merge.py  test_merge_engine.py  test_remote_profile.py
rust-sync/: Cargo.toml  README.md
rust-sync/src/: browser_storage.rs  cli.rs  fs_merge.rs  lib.rs  main.rs  merge_engine.rs  models.rs  playwright_bridge.rs  progress.rs  remote_profile.rs  utils.rs
scripts/: release_to_brew.sh
src/: deploy.rs  lib.rs  metadata_merge.rs  validate.rs
src/claude_cowork_sync/: browser_storage.py  cli.py  fs_merge.py  merge_engine.py  metadata_merge.py  progress.py  remote_profile.py  validate.py
swift-gui/Sources/CoworkMergeApp/: Clipboard.swift  ContentView.swift  CoworkMergeApp.swift  DirectoryPicker.swift  MergeViewModel.swift
swift-gui/Sources/CoworkMergeCore/: MergeFormData.swift
swift-gui/Tests/CoworkMergeCoreTests/: MergeCommandBuilderTests.swift
tests/: test_cli_merge_from.py  test_merge_engine.py  test_remote_profile.py
