[package]
name = "cowork-merge-rs"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for synchronizing Claude Cowork profile state"
license = "MIT"

[dependencies]
hex = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha1 = "0.10"
tempfile = "3.13"
walkdir = "2.5"
which = "8.0"
playwright-rs = "0.8.3"
tokio = { version = "1.48", features = ["rt", "rt-multi-thread"] }
time = "=0.3.36"
rayon = "1.11"
