[project]
name = "claude-cowork-sync"
version = "0.1.0"
description = "DEPRECATED legacy Python merge tooling for Claude Desktop Cowork profiles."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.10.6,<3.0.0",
]

[project.scripts]
cowork-merge = "claude_cowork_sync.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5,<9.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
